fixed navbar with accessibility tools and contrasts

--- a/src/main/webapp/css/home.css
+++ b/src/main/webapp/css/home.css
@@ -186,12 +186,12 @@ html, body{
 }
 
 .chart-card{
-    height: 100%;
+    height: auto;
     width: 100%;
     background-color: var(--secondary-bg-color);
     border-radius:20px;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    padding:2px 0 0 19px;
+    padding:2px 19px 19px 19px;
     margin-top:6px;
 }
 
@@ -213,6 +213,11 @@ html, body{
     color: var(--secondary-text);
 }
 
+#chart, #myChart{
+    width: 100%!important;
+}
+
+/*
 
 .chart-container{
     width: 95%!important;
@@ -224,6 +229,8 @@ html, body{
     height: 80%!important;
     width: 101%!important;
 }
+
+ */
 
 
 /*--Query obiettivi list--*/
@@ -287,19 +294,25 @@ html, body{
         width: 100%;
     }
 
+    /*
     .chart-container canvas{
         height: 89%!important;
     }
 
+     */
+
     .column-chart2{
         padding-left:0;
         background-color: transparent;
-        margin-top:193px;
+        margin-top:150px;
     }
 
+    /*
     .chart-card{
         height: 138%;
     }
+
+     */
 
     .column-chart1{
         padding-right:0;
